--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
   </style>
 </head>
 <body>
-  <h2>চৌধুরী ডেন্টাল - রোগী তথ্য</h2><label>রোগীর নাম:</label> <input type="text" id="name">
+  <h2>চৌধুরী ডেন্টাল - রোগী তথ্য</h2>
+  <a href="history.html" style="
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+">পেশেন্ট হিস্ট্রি</a>
+  <label>রোগীর নাম:</label> <input type="text" id="name">
 
 <label>ঠিকানা:</label> <input type="text" id="address">
 
