--- a/history.html
+++ b/history.html
@@ -102,5 +102,14 @@
 
     displayPatients();
   </script>
+    <a href="index.html" style="
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+">পূর্বের মেনুতে ফিরে যান</a>
 </body>
 </html>
