--- a/view.html
+++ b/view.html
@@ -49,6 +49,7 @@
         <p><span class="label">ফোন:</span> ${patient.phone}</p>
         <p><span class="label">তারিখ:</span> ${patient.date}</p>
         <p><span class="label">সমস্যা:</span> ${problems}</p>
+       <p><strong>পূর্বের সমস্যা:</strong> ${patient.previousProblem}</p>
         <p><span class="label">চিকিৎসা:</span> ${treatments}</p>
         <p><span class="label">মোট খরচ:</span> ${patient.totalCost} টাকা</p>
         <p><span class="label">অ্যাডভান্স:</span> ${patient.advance} টাকা</p>
