--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <label>রোগী যেসব সমস্যা নিয়ে এসেছে:</label> <select id="problem" multiple> <option>ব্যথা</option> <option>পুঁজ হয়েছে</option> <option>তাঁত শির শির করছে</option> <option>রোগী এক্সিডেন্ট করেছে</option> </select> <input type="text" placeholder="অতিরিক্ত সমস্যা (কাস্টম)" id="customProblem">
 
 <label>রোগীর যেসব চিকিৎসা করতে হবে:</label> <select id="treatment" multiple> <option>রুট ক্যানেল চিকিৎসা</option> <option>দাঁতের ফিলিং বসানো</option> <option>দাঁত তুলে ফেলা</option> <option>মাইনর সার্জারি</option> </select> <input type="text" placeholder="অতিরিক্ত চিকিৎসা (কাস্টম)" id="customTreatment">
-<label>রোগীর পূর্বের সমস্যা:</label>
+<label>রোগীর অন্যান্য সমস্যা:</label>
 <select id="previousProblem" multiple>
   <option value="ডায়াবেটিস">ডায়াবেটিস</option>
   <option value="প্রেসার">প্রেসার</option>
@@ -49,8 +49,8 @@
   <option value="এজমা">এজমা</option>
 </select>
 <input type="text" id="customPreviousProblem" placeholder="অতিরিক্ত সমস্যা লিখুন">
-<label>প্রেসক্রাইবকৃত ওষুধের নাম:</label>
-<textarea id="prescribedMedicines" placeholder="যে সকল ওষুধ প্রেসক্রাইব করা হয়েছে এখানে লিখুন"></textarea>
+<label>যে সকল অসুধ সেবন করছে:</label>
+<textarea id="prescribedMedicines" placeholder="যে সকল ওষুধ সেবন করছে লিখুন"></textarea>
 <label>মোট খরচ:</label> <input type="number" id="totalCost">
 
 <label>অ্যাডভান্স:</label> <input type="number" id="advance">
