--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
   </style>
 </head>
 <body>
-  <h2>চৌধুরী ডেন্টাল - রোগী তথ্য</h2>
+  <h1 style="
+  text-align: center;
+  color: #007BFF; /* ব্লু শেড (Bootstrap এর primary blue) */
+  text-shadow: 1px 1px 3px rgba(0, 0, 255, 0.2); /* হালকা ব্লু শ্যাডো */
+  font-family: Arial, sans-serif;
+">
+  CHOWDHURY DENTAL
+</h1>
+  <h2> সকল রোগীর তথ্য</h2>
   <a href="history.html" style="
   display: inline-block;
   padding: 10px 20px;
@@ -41,7 +49,7 @@
 <label>রোগী যেসব সমস্যা নিয়ে এসেছে:</label> <select id="problem" multiple> <option>ব্যথা</option> <option>পুঁজ হয়েছে</option> <option>তাঁত শির শির করছে</option> <option>রোগী এক্সিডেন্ট করেছে</option> </select> <input type="text" placeholder="অতিরিক্ত সমস্যা (কাস্টম)" id="customProblem">
 
 <label>রোগীর যেসব চিকিৎসা করতে হবে:</label> <select id="treatment" multiple> <option>রুট ক্যানেল চিকিৎসা</option> <option>দাঁতের ফিলিং বসানো</option> <option>দাঁত তুলে ফেলা</option> <option>মাইনর সার্জারি</option> </select> <input type="text" placeholder="অতিরিক্ত চিকিৎসা (কাস্টম)" id="customTreatment">
-<label>রোগীর অন্যান্য সমস্যা:</label>
+<label>রোগীর পূর্বের সমস্যা:</label>
 <select id="previousProblem" multiple>
   <option value="ডায়াবেটিস">ডায়াবেটিস</option>
   <option value="প্রেসার">প্রেসার</option>
@@ -49,15 +57,14 @@
   <option value="এজমা">এজমা</option>
 </select>
 <input type="text" id="customPreviousProblem" placeholder="অতিরিক্ত সমস্যা লিখুন">
-<label>যে সকল অসুধ সেবন করছে:</label>
-<textarea id="prescribedMedicines" placeholder="যে সকল ওষুধ সেবন করছে লিখুন"></textarea>
+<label>প্রেসক্রাইবকৃত ওষুধের নাম:</label>
+<textarea id="prescribedMedicines" placeholder="যে সকল ওষুধ প্রেসক্রাইব করা হয়েছে এখানে লিখুন"></textarea>
 <label>মোট খরচ:</label> <input type="number" id="totalCost">
 
 <label>অ্যাডভান্স:</label> <input type="number" id="advance">
 
 <label>বাকি:</label> <input type="number" id="due" readonly>
 
-<label>ছবি:</label> <input type="file" id="photo" accept="image/*">
 
   <div class="tooth-box">
     <div class="tooth-box-title">দাঁতের নাম্বার সিলেকশন</div>
