--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       localStorage.setItem('patients', JSON.stringify(patients));
 
       alert('রোগীর তথ্য সংরক্ষিত হয়েছে');
-      window.location.href = 'history.html';
+      location.reload();
     }
   </script></body>
 </html>
