--- a/history.html
+++ b/history.html
@@ -102,14 +102,8 @@
 
     displayPatients();
   </script>
-    <a href="index.html" style="
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007BFF;
-  color: white;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-">পূর্বের মেনু </a>
+    <a href="index.html" style="position: fixed; top: 20px; left: 20px; background-color: #3498db; color: white; padding: 10px 15px; text-decoration: none; border-radius: 5px; z-index: 1000;">
+  পূর্বের মেনু
+</a>
 </body>
 </html>
