--- a/history.html
+++ b/history.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>রোগীর হিস্ট্রি</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f0f0f0; padding: 20px; }
