--- a/index.html
+++ b/index.html
@@ -26,20 +26,38 @@
 ">
   CHOWDHURY DENTAL
 </h1>
-  <h2> সকল রোগীর তথ্য</h2>
-  <a href="history.html" style="
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007BFF; /* নীল রঙ */
-  color: white;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+ <h2>সকল রোগীর তথ্য</h2>
+
+<div style="
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #007BFF; /* নীল ব্যাকগ্রাউন্ড */
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
 ">
-  সকল হিস্ট্রি
-</a>
-  
+
+  <a href="history.html" style="
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #0056b3;
+  ">সকল হিস্ট্রি</a>
+
+  <a href="list.html" style="
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-color: #0056b3;
+  ">SMS তালিকা</a>
+
+</div>
     
  <label>রোগীর নাম:</label> <input type="text" id="name">
 
